# env_canada

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  LICENSE.md  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/codeql/: codeql-config.yml
.github/workflows/: codeql-analysis.yml  python-app.yml  python-publish.yml
env_canada/: __init__.py  aqhi_data.py  constants.py  ec_alerts.py  ec_aqhi.py  ec_cache.py  ec_data.py  ec_exc.py  ec_historical.py  ec_hydro.py  ec_legend.py  ec_map.py  ec_radar.py  ec_weather.py  env_canada.py  radar_sites.json
tests/: conftest.py  ec_alerts_test.py  ec_aqhi_test.py  ec_cache_test.py  ec_historical_test.py  ec_hydrop_test.py  ec_map_test.py  ec_radar_test.py  ec_weather_test.py  test_ec_aqhi.py  test_ec_historical.py  test_ec_hydro.py  test_ec_radar.py  test_ec_weather.py
tests/__snapshots__/: ec_radar_test.ambr  ec_weather_test.ambr
tests/fixtures/: alerts_wfs.json  site_list.csv  weather.xml
tests/fixtures/radar/: GetCapabilities_  GetLegendGraphic_  GetMap_  GetMap_2025-02-13T13:54:00Z  GetMap_2025-02-13T14-06-00Z  GetMap_2025-02-13T14:00:00Z  GetMap_2025-02-13T14:12:00Z  GetMap_2025-02-13T14:18:00Z  GetMap_2025-02-13T14:24:00Z  GetMap_2025-02-13T14:30:00Z  GetMap_2025-02-13T14:36:00Z  GetMap_2025-02-13T14:42:00Z  GetMap_2025-02-13T14:48:00Z  GetMap_2025-02-13T14:54:00Z  GetMap_2025-02-13T15-12-00Z  GetMap_2025-02-13T15-18-00Z  GetMap_2025-02-13T15-24-00Z  GetMap_2025-02-13T15-30-00Z  GetMap_2025-02-13T15-36-00Z  GetMap_2025-02-13T15:00:00Z  GetMap_2025-02-13T15:06:00Z  GetMap_2025-02-13T15:42:00Z  GetMap_2025-02-13T15:48:00Z  GetMap_2025-02-13T15:54:00Z  GetMap_2025-02-13T16-00-00Z  GetMap_2025-02-13T16-12-00Z  GetMap_2025-02-13T16-30-00Z  GetMap_2025-02-13T16-48-00Z  GetMap_2025-02-13T16:06:00Z  GetMap_2025-02-13T16:18:00Z  GetMap_2025-02-13T16:24:00Z  GetMap_2025-02-13T16:36:00Z  GetMap_2025-02-13T16:42:00Z  GetMap_2025-02-13T16:54:00Z
