[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "env_canada"
description="A package to access meteorological data from Environment Canada"
version="0.8.0"
authors = [
  {name = "Michael Davie", email = "michael.davie@gmail.com"},
]
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
        "aiohttp>=3.9.0",
        "geopy",
        "imageio>=2.28.0",
        "lxml",
        "numpy>=1.22.2",
        "pandas>=1.3.0",
        "Pillow>=10.0.1",
        "python-dateutil",
        "voluptuous",
]
requires-python = ">=3.10"
maintainers = [
  {name = "Michael Davie", email = "michael.davie@gmail.com"},
]
classifiers = [
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/michaeldavie/env_canada"
Documentation = "https://github.com/michaeldavie/env_canada"
Repository = "https://github.com/michaeldavie/env_canada"
"Bug Tracker" = "https://github.com/michaeldavie/env_canada/issues"
Changelog = "https://github.com/michaeldavie/env_canada/blob/master/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
include-package-data = true

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "T201", "PD", "RUF", "ERA", "LOG", "G"]
